--- a/src/styles/fighterPreview.css
+++ b/src/styles/fighterPreview.css
@@ -1,13 +1,34 @@
 .fighter-preview___root {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 250px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 250px;
 }
-
+.fighter-preview___root img {
+    /* width: 200px; */
+    height: 400px;
+}
 .fighter-preview___right {
-  align-items: flex-end;
+    align-items: flex-end;
+    transform: scaleX(-1);
 }
 
 .fighter-preview___left {
-  align-items: flex-start;
+    align-items: flex-start;
+}
+.fighter-preview___info {
+    margin-top: 10px;
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+    z-index: 999999;
+    color: white;
+    letter-spacing: 2px;
+}
+.fighter-preview___info_reverse {
+    transform: scaleX(-1);
+}
+.dark {
+    color: #000;
+}
+.fighter-preview___winner {
+    color: #000;
 }
